Fix: pagination jumping up when there is less data in the table

--- a/src/app/(main)/flights/flight-board/components/styles/FlightTable.module.css
+++ b/src/app/(main)/flights/flight-board/components/styles/FlightTable.module.css
@@ -16,6 +16,10 @@
     text-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
 }
 
+.tableWrapper{
+    height: 350px;
+}
+
 .flightTable th, .flightTable td {
     border: 1px solid #ffffff;
     padding: 12px 15px;
